--- a/weather-dashboard/package.json
+++ b/weather-dashboard/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "axios": "^1.13.5",
+    "i18next": "^25.8.13",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-i18next": "^16.5.4",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.13.0",
     "recharts": "^3.7.0"
   },
   "devDependencies": {
